--- a/style/style.scss
+++ b/style/style.scss
@@ -13,11 +13,11 @@
 
 h1 {
   font-family: Bicubik;
-  font-size: 63px;
+  font-size: 5vw;
 }
 
 .section-1 {
-  width: 1200px;
+  width: 100vw;
   height: 100vh;
   
   margin: 0 auto;
@@ -27,56 +27,65 @@ h1 {
   background-repeat: no-repeat;
 
   .header {
-    height: 130px;  
+    height: 11vw;
   
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1.5vw 3.5vw;
     
     .header-container {
-      width: 96%;
-      height: 98px;
+      width: 100%;
+      height: 8vw;
 
-      padding: 0 60px;
-      border-radius: 80px;
+      padding: 0 3.5vw;
+      border-radius: 6.66vw;
 
-      // background-color: rgb(183, 6, 3);
       background-color: #A30000;
-      box-shadow: 0px 0px 10px #A30000;
+      box-shadow: 0px 0px 2vw #A30000;
 
 
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      gap: 30px;
+
+      gap: 2.5vw;
 
       .logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 100%; 
 
         img {   
-          width: 200px;
+          width: 14vw;
           height: 100%;
-
-          object-fit: cover;
+          display: flex;
         }
       }
     }
 
     .header__menu {
-      width: 450px;
+      height: 100%;
+      width: 50vw;
+      display: flex;
+      align-items: center;
+
 
       .header__list {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 30px;
+        gap: 2.5vw;
 
         list-style-type: none;
 
         .header__item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
 
           a {
-            font-size: 20px;
+            font-size: 1.8vw;
             color: white;
             
             text-decoration: none;
@@ -86,20 +95,21 @@ h1 {
     }
 
     .contacts-container {
+      width: 28vw;
+      height: 100%;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      gap: 30px;
+      gap: 2.5vw;
 
       .callback {
-        width: 139px;
-        height: 30px;
+        width: 13vw;
+        height: 2.5vw;
 
         cursor: pointer;
         
         border: none;
-        border-radius: 80px;
-        padding: 9px 0px 10px;
+        border-radius: 6.66vw;
+        padding: 0 0.5vw;
         
         display: flex;
         align-items: center;
@@ -107,89 +117,95 @@ h1 {
         
         color: white;
         background-color: black;
-        font-size: 12px;
+        font-size: 1vw;
       }
 
       .contacts {
+        width: 13vw;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
 
         .number {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
           a {
             text-decoration: none;
             color: white;
-            font-size: 18px;
+            font-size: 1.5vw;
           }
         }
+        
         address {
           color: white;
           font-style: normal;
-          font-size: 9px
+          font-size: 0.75vw;
         }
       }
     }
   }
 
   .section-1__content {
-    padding: 51px 0px 0px 92px;
-    height: 545px;
+    padding: 4.25vw 0px 0px 7.66vw;
+    height: 45.41vw;
     color: white;
     background-image: url('../assets/red-line.png');
-    background-position: 70px 110px;
-    background-size: 58%;
+    background-position: 5.83vw 9.16vw;
+    background-size: 55vw;
     background-repeat: no-repeat;
     
     .section-1__content__text-container {
-      width: 800px;
+      width: calc(100vw * 0.6);
 
       .info-text {
-        padding-top: 30px;
-        font-size: 23px;
+        padding-top: 2.5vw;
+        font-size: 2vw;
         font-weight: 300;
       }
     }
 
     .section-1__content__button-container {
-      padding-top: 30px;
+      padding-top: 2.5vw;
       display: flex;
-      gap: 15px;
+      gap: 1.25vw;
 
       .whatsapp{
-        width: 50px;
-        height: 50px;
-        border-radius: 80px;
+        width: 4.16vw;
+        height: 4.16vw;
+        border-radius: 6.66vw;
         background-image: url('../assets/icons/whatsapp.png');
         background-size: cover;
         background-color: #A30000;
         background-repeat: no-repeat;
         cursor: pointer;
-        box-shadow: 0 0 10px #A30000;
+        box-shadow: 0 0 1.66vw #A30000;
       }
 
       .telegram {
-        width: 50px;
-        height: 50px;
-        border-radius: 80px;
+        width: 4.16vw;
+        height: 4.16vw;
+        border-radius: 6.66vw;
         background-image: url('../assets/icons/telegram.png');
         background-size: cover;
         background-color: #A30000;
         background-repeat: no-repeat;
         cursor: pointer;
-        box-shadow: 0 0 10px #A30000;
+        box-shadow: 0 0 1.66vw #A30000;
       }
 
       .try-lesson {
-        width: 342px;
-        height: 50px;
+        width: 28.5vw;
+        height: 4.16vw;
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #A30000;
-        border-radius: 80px;
-        box-shadow: 0 0 10px #A30000;
-        font-size: 28px;
+        border-radius: 6.66vw;
+        box-shadow: 0 0 1.66vw #A30000;
+        font-size: 2.33vw;
         cursor: pointer;
       }
     }
