--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import './reset.css';
 @font-face {
   font-family: 'Bicubik';
   src: url('../assets/fonts/Bicubik/Bicubik.OTF');
@@ -458,4 +458,72 @@ p {
     font-weight: 300;
 
   }
+}
+
+.section-3 {
+  height: 100vh;
+  padding: 6.5vw 0 0 7.66vw;
+  background-image: url('../assets/background/red-bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  .text-top {
+    height: 15vw;
+
+    .section-3__text-container-top {
+      padding-top: 4.33vw;
+      // padding-left: 5vw;
+      height: 100%;
+      display: flex;
+      gap: 2vw;
+    }
+
+    .black-star {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 2vw;
+        height: 2vw;
+        // object-fit: cover;
+      }
+    }
+
+    .heading-p {
+
+      font-size: 1.5vw;
+      color: white;
+
+      &::first-line {
+        font-weight: 700;
+      }
+    }
+
+    .foundation-year {
+      padding-top: 5vw;
+      p {
+        font-size: 2vw;
+        color: white;
+      }
+    }
+    
+    .years-in-business {
+      padding-top: 5vw;
+      p {
+        font-size: 2vw;
+        color: white;
+      }
+    }
+
+  }
+}
+
+.black {
+  color: black;
+}
+
+.white {
+  color: white;
 }
