--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import './reset.css';
 @font-face {
@@ -29,6 +30,24 @@ h2 {
 p {
   font-size: 2vw;
   font-weight: 300;
+}
+
+.h1-like {
+  font-size: 3.5vw;
+  position: relative;
+}
+.h1-like span {
+  font-family: "Bicubik";
+  color: black;
+}
+.h1-like:after {
+  content: "– Игорь Борисович Сандлер";
+  font-family: "Montserrat";
+  font-size: 1.25vw;
+  font-weight: 300;
+  position: absolute;
+  bottom: -4vw;
+  right: -4vw;
 }
 
 .section-1 {
@@ -322,7 +341,8 @@ p {
   justify-content: center;
   align-items: center;
 }
-.buttons-container .all-courses a:link, .buttons-container .all-courses a:visited {
+.buttons-container .all-courses a:link,
+.buttons-container .all-courses a:visited {
   text-decoration: none;
   color: var(--red);
   font-size: 2vw;
@@ -337,7 +357,8 @@ p {
   justify-content: center;
   align-items: center;
 }
-.buttons-container .sign a:link, .buttons-container .sign a:visited {
+.buttons-container .sign a:link,
+.buttons-container .sign a:visited {
   text-decoration: none;
   color: white;
   font-size: 2vw;
@@ -378,14 +399,11 @@ p {
 }
 
 .section-3 {
-  height: 100vh;
-  padding: 6.5vw 0 0 7.66vw;
-  background-image: url("../assets/background/red-bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.section-3 .text-top {
-  height: 15vw;
+  padding: 6.5vw 8.833vw 9.5vw 7.66vw;
+  background-size: 45vw, 47vw, 42.25vw 38.75vw, cover;
+  background-image: url("../assets/sandler.png"), url("../assets/sandler-text.png"), url("../assets/concert-hall.png"), url("../assets/background/red-bg.jpg");
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+  background-position: left bottom, 41vw 45.5vw, right 20%, center;
 }
 .section-3 .text-top .section-3__text-container-top {
   padding-top: 4.33vw;
@@ -394,14 +412,15 @@ p {
   gap: 2vw;
 }
 .section-3 .text-top .black-star {
-  height: 100%;
+  height: 11vw;
+  width: 3vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .section-3 .text-top .black-star img {
-  width: 2vw;
-  height: 2vw;
+  width: 3vw;
+  height: 3vw;
 }
 .section-3 .text-top .heading-p {
   font-size: 1.5vw;
@@ -411,18 +430,23 @@ p {
   font-weight: 700;
 }
 .section-3 .text-top .foundation-year {
-  padding-top: 5vw;
+  padding-top: 4vw;
 }
 .section-3 .text-top .foundation-year p {
   font-size: 2vw;
   color: white;
 }
 .section-3 .text-top .years-in-business {
-  padding-top: 5vw;
+  padding-top: 4vw;
 }
 .section-3 .text-top .years-in-business p {
   font-size: 2vw;
   color: white;
+}
+.section-3 .text-bottom {
+  padding-top: 16.5vw;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .black {
