--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import './reset.css';
+
 @font-face {
   font-family: 'Bicubik';
   src: url('../assets/fonts/Bicubik/Bicubik.OTF');
@@ -30,6 +31,26 @@ h2 {
 p {
   font-size: 2vw;
   font-weight: 300;
+}
+
+.h1-like {
+  font-size: 3.5vw;
+  position: relative;
+
+  span {
+    font-family: 'Bicubik';
+    color: black;
+  }
+
+  &:after {
+    content: '– Игорь Борисович Сандлер';
+    font-family: 'Montserrat';
+    font-size: 1.25vw;
+    font-weight: 300;
+    position: absolute;   
+    bottom: -4vw;
+    right: -4vw;
+  }
 }
 
 .section-1 {
@@ -305,7 +326,7 @@ p {
         justify-content: center;
 
         position: relative;
-        
+
       }
 
       .bass-guitar {
@@ -388,19 +409,20 @@ p {
     background-color: white;
     border: .16vw solid var(--red);
     border-radius: 6.66vw;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    a:link, a:visited {
+
+    a:link,
+    a:visited {
       text-decoration: none;
       color: var(--red);
       font-size: 2vw;
       font-weight: 300;
     }
   }
-  
+
   .sign {
     width: 17vw;
     height: 4vw;
@@ -410,8 +432,9 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    a:link, a:visited {
+
+    a:link,
+    a:visited {
       text-decoration: none;
       color: white;
       font-size: 2vw;
@@ -442,6 +465,7 @@ p {
     display: flex;
     justify-content: center;
   }
+
   .more {
 
     font-size: 1.25vw;
@@ -461,33 +485,32 @@ p {
 }
 
 .section-3 {
-  height: 100vh;
-  padding: 6.5vw 0 0 7.66vw;
-  background-image: url('../assets/background/red-bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  padding: 6.5vw 8.833vw 9.5vw 7.66vw;
+  background-size: 45vw, 47vw, 42.25vw 38.75vw, cover;
+  background-image: url('../assets/sandler.png'), url('../assets/sandler-text.png'), url('../assets/concert-hall.png'), url('../assets/background/red-bg.jpg');
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+  background-position: left bottom, 41vw 45.5vw, right 20%, center;
 
   .text-top {
-    height: 15vw;
+    // height: 15vw;
 
     .section-3__text-container-top {
       padding-top: 4.33vw;
-      // padding-left: 5vw;
       height: 100%;
       display: flex;
       gap: 2vw;
     }
 
     .black-star {
-      height: 100%;
+      height: 11vw;
+      width: 3vw;
       display: flex;
       justify-content: center;
       align-items: center;
 
       img {
-        width: 2vw;
-        height: 2vw;
-        // object-fit: cover;
+        width: 3vw;
+        height: 3vw;
       }
     }
 
@@ -502,21 +525,28 @@ p {
     }
 
     .foundation-year {
-      padding-top: 5vw;
-      p {
-        font-size: 2vw;
-        color: white;
-      }
-    }
-    
-    .years-in-business {
-      padding-top: 5vw;
+      padding-top: 4vw;
+
       p {
         font-size: 2vw;
         color: white;
       }
     }
 
+    .years-in-business {
+      padding-top: 4vw;
+
+      p {
+        font-size: 2vw;
+        color: white;
+      }
+    }
+  }
+
+  .text-bottom {
+    padding-top: 16.5vw;
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
