--- a/style/style.css
+++ b/style/style.css
@@ -149,7 +149,7 @@ p {
 .section-1 .header .contacts-container .contacts address {
   color: white;
   font-style: normal;
-  font-size: 0.75vw;
+  font-size: 0.72vw;
 }
 .section-1 .section-1__content {
   padding: 4.25vw 0px 0px 7.66vw;
@@ -455,4 +455,86 @@ p {
 
 .white {
   color: white;
+}
+
+.section-4 {
+  display: flex;
+  justify-content: center;
+  padding-top: 6.5vw;
+  padding-bottom: 6.5vw;
+  background-image: url("../assets/background/form-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.section-4 form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2vw;
+}
+.section-4 form fieldset {
+  background-color: white;
+  width: 57vw;
+  height: 58vw;
+  padding: 6vw;
+  border-radius: 3vw;
+  box-shadow: 0 0 1vw black;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5vw;
+}
+.section-4 form fieldset .heading {
+  font-family: "Bicubik";
+  font-size: 3.5vw;
+  text-align: center;
+  padding-bottom: 3vw;
+}
+.section-4 form fieldset select {
+  width: 100%;
+  padding: 2vw 3vw;
+  border: 0.16vw solid var(--red);
+  border-radius: 3vw;
+  display: flex;
+  flex-direction: column;
+}
+.section-4 form fieldset select::-moz-placeholder {
+  font-size: 2vw;
+  color: var(--red);
+}
+.section-4 form fieldset select::placeholder {
+  font-size: 2vw;
+  color: var(--red);
+}
+.section-4 form fieldset select option {
+  background-color: green;
+  font-size: 2vw;
+  color: var(--red);
+}
+.section-4 form fieldset input {
+  width: 100%;
+  padding: 2vw 3vw;
+  border: 0.16vw solid var(--red);
+  border-radius: 3vw;
+}
+.section-4 form fieldset input::-moz-placeholder {
+  font-size: 2vw;
+  color: var(--red);
+}
+.section-4 form fieldset input::placeholder {
+  font-size: 2vw;
+  color: var(--red);
+}
+.section-4 form fieldset .request {
+  margin-top: 5vw;
+  width: auto;
+  padding: 1vw 2vw;
+  background-color: var(--red);
+  border-radius: 3vw;
+  color: white;
+  font-size: 2vw;
+  font-weight: 300;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
