--- a/style/style.scss
+++ b/style/style.scss
@@ -592,7 +592,7 @@ p {
         font-family: 'Bicubik';
         font-size: 3.5vw;
         text-align: center;
-        
+
         padding-bottom: 3vw;
       }
 
@@ -629,7 +629,7 @@ p {
         &::placeholder {
           font-size: 2vw;
           color: var(--red);
-        }  
+        }
       }
 
       .request {
@@ -643,6 +643,88 @@ p {
         font-weight: 300;
         cursor: pointer;
       }
+    }
+  }
+}
+
+// .swiper {
+//   width: 100vw;
+//   height: 33.66vw;
+//   background-color: red;
+//   display: flex;
+//   gap: 20px;
+// }
+
+// .swiper-slide {
+//   border-radius: 80px;
+//   height: 100%;
+// }
+
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
+
+.section-5 {
+  padding: 6.66vw 7.33vw 6.8vw 7.66vw;
+  background-image: url('../assets/kids.png'), url('../assets/background/red-bg.jpg');
+  background-repeat: no-repeat, no-repeat;
+  background-size: 32vw 29.83vw, cover;
+  background-position: 0% 50%, center center;
+  color: white;
+
+  h1 {
+    padding-bottom: 2vw;
+  }
+
+  .h1-quote {
+    font-family: 'Bicubik';
+    font-size: 5vw;
+    padding-bottom: 1vw;
+  }
+
+  .section-5__content {
+    padding-left: 28vw;
+    padding-bottom: 3vw;
+
+    p {
+      font-size: 1.5vw;
+      line-height: 2vw;
+    }
+
+    .maria {
+      padding-top: 4.66vw;
+      font-size: 2vw;
+      font-family: 'Bicubik';
+      line-height: 2.5vw;
+    }
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 2.5vw;
+
+    padding-top: 2vw;
+    
+    font-size: 2vw;
+
+    .see-more {
+      color: white;
+      padding: 1vw 3vw;
+      border: 0.16vw solid white;
+      border-radius: 6.66vw;
+      cursor: pointer;
+    }
+    .try {
+      color: var(--red);
+      padding: 1vw 3vw;
+      background-color: white;
+      border-radius: 6.66vw;
+      cursor: pointer;
     }
   }
 }
