--- a/style/style.css
+++ b/style/style.css
@@ -82,12 +82,11 @@ p {
 }
 .section-1 .header .header-container .logo-container img {
   width: 14vw;
-  height: 100%;
   display: flex;
 }
 .section-1 .header .header__menu {
   height: 100%;
-  width: 50vw;
+  width: 45vw;
   display: flex;
   align-items: center;
 }
@@ -109,25 +108,11 @@ p {
   text-decoration: none;
 }
 .section-1 .header .contacts-container {
-  width: 28vw;
+  width: 33vw;
   height: 100%;
   display: flex;
   align-items: center;
   gap: 2.5vw;
-}
-.section-1 .header .contacts-container .callback {
-  width: 13vw;
-  height: 2.5vw;
-  cursor: pointer;
-  border: none;
-  border-radius: 6.66vw;
-  padding: 0 0.5vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  background-color: black;
-  font-size: 1vw;
 }
 .section-1 .header .contacts-container .contacts {
   width: 13.5vw;
@@ -170,28 +155,6 @@ p {
   padding-top: 2.5vw;
   display: flex;
   gap: 1.25vw;
-}
-.section-1 .section-1__content .section-1__content__button-container .whatsapp {
-  width: 4.16vw;
-  height: 4.16vw;
-  border-radius: 6.66vw;
-  background-image: url("../assets/icons/whatsapp.png");
-  background-size: cover;
-  background-color: var(--red);
-  background-repeat: no-repeat;
-  cursor: pointer;
-  box-shadow: 0 0 1.66vw var(--red);
-}
-.section-1 .section-1__content .section-1__content__button-container .telegram {
-  width: 4.16vw;
-  height: 4.16vw;
-  border-radius: 6.66vw;
-  background-image: url("../assets/icons/telegram.png");
-  background-size: cover;
-  background-color: var(--red);
-  background-repeat: no-repeat;
-  cursor: pointer;
-  box-shadow: 0 0 1.66vw var(--red);
 }
 .section-1 .section-1__content .section-1__content__button-container .try-lesson {
   width: 28.5vw;
@@ -636,4 +599,99 @@ p {
   border: 0.16vw solid white;
   cursor: pointer;
   font-size: 2vw;
+}
+
+.section-8 {
+  padding: 6.83vw 0 8.16vw 7.66vw;
+  background-image: url("../assets/map.png"), url("../assets/background/white-bg.jpg");
+  background-size: 52.66vw 37.66vw, cover;
+  background-position: 100% 40%, center center;
+  background-repeat: no-repeat;
+}
+.section-8 .mina {
+  font-size: 1.5vw;
+  padding-bottom: 2vw;
+}
+.section-8 img {
+  display: block;
+  max-width: 100%;
+  height: 100px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.section-8 .section-8__number a {
+  text-decoration: none;
+  color: black;
+  font-size: 2.83vw;
+}
+.section-8 address {
+  color: black;
+  font-style: normal;
+  font-size: 1.385vw;
+  font-weight: 300;
+  padding-bottom: 2vw;
+}
+.section-8 .icon-container {
+  padding-bottom: 1vw;
+  display: flex;
+  gap: 1vw;
+}
+.section-8 .icon-container .whatsapp {
+  box-shadow: initial;
+}
+.section-8 .icon-container .telegram {
+  box-shadow: initial;
+}
+.section-8 .icon-container .tiktok {
+  box-shadow: initial;
+}
+.section-8 .callback-footer {
+  font-size: 1.25vw;
+  font-weight: 300;
+}
+
+.whatsapp {
+  width: 4.16vw;
+  height: 4.16vw;
+  border-radius: 6.66vw;
+  background-image: url("../assets/icons/whatsapp.png");
+  background-size: cover;
+  background-color: var(--red);
+  background-repeat: no-repeat;
+  cursor: pointer;
+  box-shadow: 0 0 1.66vw var(--red);
+}
+
+.telegram {
+  width: 4.16vw;
+  height: 4.16vw;
+  border-radius: 6.66vw;
+  background-image: url("../assets/icons/telegram.png");
+  background-size: cover;
+  background-color: var(--red);
+  background-repeat: no-repeat;
+  cursor: pointer;
+  box-shadow: 0 0 1.66vw var(--red);
+}
+
+.tiktok {
+  width: 4.16vw;
+  height: 4.16vw;
+  border-radius: 6.66vw;
+  background-image: url("../assets/icons/tiktok.png");
+  background-size: cover;
+  background-color: var(--red);
+  background-repeat: no-repeat;
+  cursor: pointer;
+  box-shadow: 0 0 1.66vw var(--red);
+}
+
+.callback {
+  cursor: pointer;
+  border: none;
+  border-radius: 6.66vw;
+  padding: 0.75vw 1.33vw;
+  color: white;
+  background-color: black;
+  font-size: 1vw;
 }/*# sourceMappingURL=style.css.map */
