--- a/style/style.css
+++ b/style/style.css
@@ -604,20 +604,19 @@ p {
 .section-8 {
   padding: 6.83vw 0 8.16vw 7.66vw;
   background-image: url("../assets/map.png"), url("../assets/background/white-bg.jpg");
-  background-size: 52.66vw 37.66vw, cover;
-  background-position: 100% 40%, center center;
+  background-size: 52.66vw 35vw, cover;
+  background-position: 100% 60%, center center;
   background-repeat: no-repeat;
 }
 .section-8 .mina {
   font-size: 1.5vw;
   padding-bottom: 2vw;
 }
-.section-8 img {
-  display: block;
-  max-width: 100%;
-  height: 100px;
-  -o-object-fit: contain;
-     object-fit: contain;
+.section-8 .sandler-container {
+  padding-bottom: 2vw;
+}
+.section-8 .sandler-container img {
+  max-height: 8.75vw;
 }
 .section-8 .section-8__number a {
   text-decoration: none;
@@ -694,4 +693,33 @@ p {
   color: white;
   background-color: black;
   font-size: 1vw;
+}
+
+.footer {
+  height: 29.75vw;
+  background-color: var(--red);
+  padding: 5.33vw 7.5vw;
+}
+.footer .footer__menu {
+  height: 100%;
+  width: 45vw;
+  display: flex;
+  align-items: center;
+}
+.footer .footer__menu .footer__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2vw;
+  list-style-type: none;
+}
+.footer .footer__menu .footer__list .footer__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer .footer__menu .footer__list .footer__item a {
+  font-size: 1.8vw;
+  color: white;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
