--- a/style/style.scss
+++ b/style/style.scss
@@ -760,13 +760,15 @@ p {
   }
 
   .sandler-container {
+    width: 30vw;
     padding-bottom: 2vw;
+    display: flex;
+    
 
     img {
-      // display: block;
-
+      display: block;
+      max-width: 100%;
       max-height: 8.75vw;
-      // object-fit: fill;
     }
   }
 
