--- a/style/style.css
+++ b/style/style.css
@@ -821,7 +821,6 @@ p {
 .our-teachers .swiper {
   width: 85.83vw;
   height: 100%;
-  gap: 0px;
 }
 .our-teachers .swiper .swiper-button-next {
   width: 2vw;
@@ -832,7 +831,7 @@ p {
   color: var(--red);
 }
 .our-teachers .swiper-slide {
-  width: 22.5vw;
+  width: 100%;
   height: 40vw;
   text-align: center;
   font-size: 18px;
@@ -845,10 +844,8 @@ p {
 }
 .our-teachers .swiper-slide .img-wrapper {
   display: flex;
-  width: 22.5vw;
+  max-width: 100%;
   height: 25.4vw;
-  -o-object-fit: cover;
-     object-fit: cover;
   overflow: hidden;
   justify-content: center;
   align-items: center;
@@ -858,8 +855,6 @@ p {
   max-height: 100%;
   display: flex;
   border-radius: 3vw;
-  -o-object-fit: fill;
-     object-fit: fill;
 }
 .our-teachers .swiper-slide p {
   font-family: "Bicubik";
@@ -868,6 +863,19 @@ p {
 .our-teachers .swiper-slide .lesson-type {
   width: 3.6vw;
   height: 3.6vw;
+}
+.our-teachers .reviews__button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.our-teachers .reviews__button-container .sign {
+  padding: 0.75vw 2vw 1vw;
+  background-color: var(--red);
+  color: white;
+  border-radius: 6.66vw;
+  font-size: 2vw;
+  cursor: pointer;
 }
 
 .vocal {
