--- a/style/style.scss
+++ b/style/style.scss
@@ -996,7 +996,6 @@ p {
   .swiper {
     width: 85.83vw;
     height: 100%;
-    gap: 0px;
 
     .swiper-button-next {
       width: 2vw;
@@ -1011,7 +1010,7 @@ p {
   }
 
   .swiper-slide {
-    width: 22.5vw;
+    width: 100%;
     height: 40vw;
     text-align: center;
     font-size: 18px;
@@ -1024,20 +1023,19 @@ p {
 
     .img-wrapper {
       display: flex;
-      width: 22.5vw;
+      max-width: 100%;
       height: 25.4vw;
-      object-fit: cover;
+      // object-fit: cover;
       overflow: hidden;
       justify-content: center;
       align-items: center;
-
 
       img {
         max-width: 100%;
         max-height: 100%;
         display: flex;
         border-radius: 3vw;
-        object-fit: fill;
+        
 
       }
     }
@@ -1050,6 +1048,22 @@ p {
     .lesson-type {
       width: 3.6vw;
       height: 3.6vw;
+    }
+  }
+
+  .reviews__button-container {
+    // height: ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .sign {
+      padding: 0.75vw 2vw 1vw;
+      background-color: var(--red);
+      color: white;
+      border-radius: 6.66vw;
+      font-size: 2vw;
+      cursor: pointer;
     }
   }
 }
