--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,7 @@ p {
 .section-1 .header .contacts-container .contacts address {
   color: white;
   font-style: normal;
-  font-size: 0.72vw;
+  font-size: 0.75vw;
 }
 .section-1 .section-1__content {
   padding: 4.25vw 0px 0px 7.66vw;
@@ -806,7 +806,7 @@ p {
 .footer .footer__bottom-line .footer__contacts-container a {
   text-decoration: none;
   color: white;
-  font-size: 2.83vw;
+  font-size: 2.7vw;
 }
 .footer .footer__bottom-line .footer__contacts-container address {
   color: white;
@@ -904,4 +904,46 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+.students-pics {
+  padding: 5.33vw 7.5vw;
+}
+.students-pics .swiper {
+  width: 85.83vw;
+  height: 100%;
+}
+.students-pics .swiper .swiper-button-next {
+  width: 2vw;
+  color: var(--red);
+}
+.students-pics .swiper .swiper-button-prev {
+  width: 2vw;
+  color: var(--red);
+}
+.students-pics .swiper-slide {
+  width: 100%;
+  height: 40vw;
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+.students-pics .swiper-slide .img-wrapper {
+  display: flex;
+  max-width: 100%;
+  height: 25.4vw;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+}
+.students-pics .swiper-slide .img-wrapper img {
+  max-width: 100%;
+  max-height: 100%;
+  display: flex;
+  border-radius: 3vw;
 }/*# sourceMappingURL=style.css.map */
