--- a/style/style.scss
+++ b/style/style.scss
@@ -155,7 +155,7 @@ p {
         address {
           color: white;
           font-style: normal;
-          font-size: 0.72vw;
+          font-size: 0.75vw;
         }
       }
     }
@@ -974,7 +974,7 @@ p {
       a {
         text-decoration: none;
         color: white;
-        font-size: 2.83vw;
+        font-size: 2.7vw;
       }
 
       address {
@@ -1094,4 +1094,57 @@ p {
   background-repeat: no-repeat;
   background-position: center center;
 
+}
+
+.students-pics {
+  padding: 5.33vw 7.5vw;
+
+  
+  .swiper {
+    width: 85.83vw;
+    height: 100%;
+
+    .swiper-button-next {
+      width: 2vw;
+      color: var(--red);
+
+    }
+
+    .swiper-button-prev {
+      width: 2vw;
+      color: var(--red);
+    }
+  }
+
+  .swiper-slide {
+    width: 100%;
+    height: 40vw;
+    text-align: center;
+    font-size: 18px;
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+
+    .img-wrapper {
+      display: flex;
+      max-width: 100%;
+      height: 25.4vw;
+      // object-fit: cover;
+      overflow: hidden;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+        display: flex;
+        border-radius: 3vw;
+        
+
+      }
+    }
+  }
 }
