--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,10 @@
   font-family: "Bicubik";
   src: url("../assets/fonts/Bicubik/Bicubik.OTF");
 }
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --red: #A30000;
 }
