--- a/style/style.scss
+++ b/style/style.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
 }
 
 :root {
@@ -186,6 +186,28 @@ p {
       padding-top: 2.5vw;
       display: flex;
       gap: 1.25vw;
+
+      .icon-container {
+        padding-bottom: 1vw;
+        gap: 1vw;
+        display: flex;
+
+        .whatsapp {
+          width: 4.16vw;
+          height: 4.16vw;
+          background-size: 5vw 5vw;
+          background-position: center center;
+          box-shadow: 0 0 10px var(--red);
+        }
+        
+        .telegram {
+          width: 4.16vw;
+          height: 4.16vw;
+          background-size: 5vw 5vw;
+          background-position: center center;
+          box-shadow: 0 0 10px var(--red);
+        }
+      }
 
       .try-lesson {
         width: 28.5vw;
@@ -998,32 +1020,19 @@ p {
 
   
   .swiper {
-    width: 85.83vw;
+    width: 100%;
     height: 100%;
-
-    .swiper-button-next {
-      width: 2vw;
-      color: var(--red);
-
-    }
-
-    .swiper-button-prev {
-      width: 2vw;
-      color: var(--red);
-    }
   }
 
   .swiper-slide {
-    width: 100%;
     height: 40vw;
-    text-align: center;
-    font-size: 18px;
-    background: transparent;
+
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
+
+    // overflow: hidden;
 
     .img-wrapper {
       display: flex;
@@ -1053,10 +1062,17 @@ p {
       width: 3.6vw;
       height: 3.6vw;
     }
+
+    .swiper-pagination {
+      .swiper-pagination-bullet {
+        background-color: var(--red);
+      }
+
+    }
   }
 
   .reviews__button-container {
-    // height: ;
+    padding-top: 1vw;
     display: flex;
     justify-content: center;
     align-items: center;
